--- a/src/lib/interactif/tableaux/tableauMathlive.scss
+++ b/src/lib/interactif/tableaux/tableauMathlive.scss
@@ -1,10 +1,10 @@
 table.tableauMathlive {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 0.5rem;
+ // margin-left: auto;
+ // margin-right: auto;
+ // margin-top: 0.5rem;
   border-collapse: collapse;
   text-align: center;
-  border: 2px solid #1F2429;
+  border: 5px solid rgb(0,0,0);
 
   tbody {
     tr {
@@ -18,14 +18,7 @@ table.tableauMathlive {
         padding: 2px 5px 2px 5px;
         margin: 3px;
         text-align: center;
-        math-field {
-          min-width: 60px;
-          margin-top: 2px;
-          padding: 2px;
-          border: transparent;
-        }
       }
-
     }
 
     th {
@@ -38,12 +31,18 @@ table.tableauMathlive {
       margin: 3px;
     }
 
+    math-field.tableauMathlive {
+      min-width: 60px;
+      margin-top: 2px;
+      padding: 2px;
+      border: solid 1px rgba(0, 0, 100, 0.2);
+    }
   }
 }
 
 @media (prefers-color-scheme: dark) {
   /* custom css */
   table.tableauMathlive {
-  border: 2px solid #fff;
+    border: 2px solid rgb(100,100,100);
   }
 }
